# animalese-rs

./: Cargo.toml  LICENSE  README.md
examples/: cli.rs
src/: lib.rs
