[package]
name = "animalese"
version = "0.1.1"
edition = "2024"
authors = ["Kyle Kelley"]
description = "Rust library for generating Animal Crossing-style animalese speech sounds"
license = "MIT"
keywords = ["audio", "animalese", "animal-crossing", "speech", "sound"]
categories = ["multimedia::audio"]
readme = "README.md"
exclude = ["**/.DS_Store", "target/"]

[dependencies]
kira = "0.9"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
atty = "0.2"
